--- a/.infrastructure/k8s/deo-backend-dep.yaml
+++ b/.infrastructure/k8s/deo-backend-dep.yaml
@@ -19,4 +19,4 @@ spec:
           args: ["--urls", "http://*:3000"]
           ports:
             - containerPort: 3000
-# Password argo - AdminAdmin
+# Password argo - admin123
