--- a/.infrastructure/k8s/deo-frontend-dep.yaml
+++ b/.infrastructure/k8s/deo-frontend-dep.yaml
@@ -17,7 +17,7 @@ spec:
       #   - name: ghcr-login-secret
       containers:
         - name: deo-frontend
-          image: ghcr.io/cantfirmed/deo-webapp-frontend:latest
+          image: ghcr.io/cantfirmed/deo-webapp-frontend:v1.9
           args: ["--urls", "http://*:2000"]
           ports:
             - containerPort: 2000
